fix memory leaks & styling overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -133,3 +133,23 @@ body {
     height: 55vh;
   }
 }
+
+html {
+  --scrollbarBG: #CFD8DC;
+  --thumbBG: #90A4AE;
+}
+.messages::-webkit-scrollbar {
+  width: 11px;
+}
+.messages {
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+.messages::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+.messages::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG) ;
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
+}
